change color of navbar,fix title overflow

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -2,7 +2,7 @@
 
 
 .NavbarDiv{
-    background: rgb(113, 187, 131);
+    background: rgb(252, 182, 31);
     height: 8vh;
       display: flex;        
     justify-content: space-evenly;
