--- a/src/scss/pages/home/_slider.scss
+++ b/src/scss/pages/home/_slider.scss
@@ -3,4 +3,8 @@
     height: 400px;
     width: 100%;
     object-fit: cover;
+    
+}
+.slider{
+    padding: 40px;
 }
